<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.tp2.viewmodel.LoginViewModel" />
    </data>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_gravity="center"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp">
                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_user"
                        android:layout_gravity="center" />
                    <TextView
                        android:id="@+id/tv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:text="@string/emailLogin"
                        android:textSize="15sp"
                        android:gravity="center_vertical"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.user.email}" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="25dp">
                    <ImageView
                        android:id="@+id/iv_image2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_pwd"
                        android:layout_gravity="center" />
                    <TextView
                        android:id="@+id/tv_id2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:text="@string/pwdLogin"
                        android:textSize="15sp"
                        android:gravity="center_vertical"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.user.password}" />

                <TextView
                    android:id="@+id/tv_stay_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/stayConnected"
                    android:textSize="15sp"
                    android:gravity="center_vertical"/>
                <Switch
                    android:id="@+id/switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:onClick="@{() -> viewModel.stayConnected()}"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_validate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onValidate()}"
                        android:layout_marginEnd="100dp"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_identity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{() -> viewModel.onSignUp()}" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</layout>