<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.tp2.viewmodel.ApiListMovieViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:onClick="@{() -> viewModel.userClicked(viewModel.user)}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:weightSum="8"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center" >
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/man"
                        app:genderImage="@{viewModel.user}"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_firstname_item"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.user.firstname}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/tv_lastname_item"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginBottom="10dp"
                            android:text="@{viewModel.user.lastname}"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textSize="20sp"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_email_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.user.email}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:gravity="center_vertical">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_validate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/logout"
                        android:onClick="@{() -> viewModel.logout()}"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="50dp"
                android:hint="@string/searchBar"
                android:text="@{viewModel.searchedValue}"/>
        </LinearLayout>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshVue"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>